  IMPROVEMENTS

    HADOOP-8823. ant package target should not depend on cn-docs. (szetszwo)

    HADOOP-8995. Remove unnecessary bogus exception from Configuration.java.
    (Jing Zhao via suresh)

    HDFS-4161. Backport HDFS-1865 "Share LeaseChecker thread among DFSClients"
    and the related JIRAs: HDFS-278, HDFS-1840, HDFS-1870, HDFS-1890, HDFS-2810,
    HDFS-3646 and HDFS-2240. (szetszwo)

  BUG FIXES

    HADOOP-8878. Uppercase namenode hostname causes hadoop dfs calls with
    webhdfs filesystem and fsck to fail when security is on.
    (Arpit Gupta via suresh)

    HADOOP-8882. Uppercase namenode host name causes fsck to fail when 
    useKsslAuth is on. (Arpit Gupta via suresh)

    HDFS-3791. HDFS-173 Backport - Namenode will not block until a large 
    directory deletion completes. It allows other operations when the 
    deletion is in progress. (umamahesh via suresh)

    HDFS-2815. Namenode is not coming out of safemode when we perform
    (NN crash + restart). Also FSCK report shows blocks missed. (umamahesh)

    HDFS-4134. hadoop namenode and datanode entry points should return 
    negative exit code on bad arguments. (Steve Loughran via suresh)

    MAPREDUCE-4782. NLineInputFormat skips first line of last InputSplit
    (Mark Fuhs via bobby)

    MAPREDUCE-4749. Fixed a bug in TaskTracker because of which kill-actions get
    delayed progressively. (Arpit Gupta via vinodkv)

Release 1.1.0 - 2012.09.28

  INCOMPATIBLE CHANGES

    HDFS-2617. Replaced Kerberized SSL for image transfer and fsck with
    SPNEGO-based solution. (Jakob Homan, Owen O'Malley, Alejandro Abdelnur and
    Aaron T. Myers via atm)

    HDFS-3044. fsck move should be non-destructive by default.
    (Colin Patrick McCabe via eli)

    HADOOP-8230. Enable sync by default and disable append. (eli)

    HADOOP-8365. Provide ability to disable working sync. (eli)

    HADOOP-8552. Conflict: Same security.log.file for multiple users. 
    (kkambatl via tucu)
    
  NEW FEATURES
